# TypePipe

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  EventSystem.h  LICENSE  README.md  TypePipe.h
Source/: EventSystem.h  Main.cpp  MainComponent.cpp  MainComponent.h
examples/basic/: CMakeLists.txt  main.cpp
examples/juce/: CMakeLists.txt  README.md
examples/juce/Source/: MainComponent.cpp  MainComponent.h
